--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,10 @@ find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 
 
 include_directories(".")
+include_directories("observable")
+include_directories("observer")
+include_directories("processor")
+
 add_executable(${PROJECT_NAME} main.cpp)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
